Fix #258: deliteful/ViewStack: Kittens demo is broken The ViewStack height was 0 Relayout the demo with a LinearLayout Add a default height to the ViewStack + doc Fix Back button visibility under IE (display: initial is not supported by IE) Reverse the back transition

--- a/ViewStack/themes/ViewStack_template.less
+++ b/ViewStack/themes/ViewStack_template.less
@@ -1,5 +1,6 @@
 @import "../../../../delite/themes/bootstrap/includes";
 .d-view-stack {
+	height: 200px;
 	display: block;
 	.box-sizing(border-box);
 	position: relative; // Enables clipping
