--- a/ViewStack/themes/ios/ViewStack.css
+++ b/ViewStack/themes/ios/ViewStack.css
@@ -1,4 +1,5 @@
 .d-view-stack {
+  height: 200px;
   display: block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
